--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/PORTFOLIO Projects/Analog Clock/styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <title>My First Analog Clock</title>
 </head>
 <body>
@@ -35,6 +35,6 @@
 
 
 
-    <script src="/PORTFOLIO Projects/Analog Clock/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
